Tiger_frontend/project1_test_code_example/tests/correct/function-param-custom.tiger
main let
    type x = int;
    var myX : x;
    function print ( n : x ) : int begin
            printi(n);
            return n;
    end;
in begin
        print(5);
end