Tiger_frontend/project1_test_code_example/tests/errors/function-rettype-noreturn.tiger
main let
        var sum, i : int;
        function X ( n : int ) : int begin
                printi(n);
        end;
in
begin
        for i := 0 to 99 do
                sum := sum + i;
        enddo;
end